css/stylesheet.css
/* processingLibs style by andreas schlegel, sojamo. */


* {
	margin:0;
	padding:0;
	border:0;
}


body {
	font-family : Verdana, Geneva, Arial, Helvetica, sans-serif; 
	font-size : 100%; 
    font-size : 0.70em;
	font-weight : normal;
	line-height	: normal;
}



#container {
	margin-left:64px;
	background-color:#fff;
}

#header {
	float:left;
	padding-top:24px;
	padding-bottom:48px;
}

#menu {
	margin-top:16px;
	float:left;
	margin-bottom:64px;
}


#about,
#download,
#examples,
#demos,
#misc {
	width:480px;
	float:left;
	margin-right:24px;
}


#resources, #info {
	width:320px;
	float:left;
}


.clear {
	clear:both;
}

#footer {
	margin-top:300px;
	height:20px;
	margin-bottom:32px;
}


#menu ul {
	list-style:none;
	padding:0;
	margin:0;
}


#menu ul li, #subMenu ul li {
	float:left;
	padding-right:6px; 
}


#PreviousNext {
    margin-top:100px;
}




/* Headings */

h1 {
	font-size:2em; 
	font-weight:normal;
}


h1 a {
	font-size:1em !important; 
	font-weight:normal !important;
    cursor: default;
}



h2, h3, h4, h5, th {
	font-size:1.3em;
	font-weight:normal;
	margin-bottom:4px;
}


h3, h4, h5, th {
    font-size:1.2em;
}


h3 {
    border-bottom: dashed 1px #999;
}



p { 
	font-size:1em;
    line-height:19px;
	width:90%;
	margin-bottom:32px;
}


li p {
    margin-bottom:0px;
}


pre, code {  
    font-family: Menlo, "Courier New", monospace;
    font-size: 11px;
	line-height:normal;
}




hr {
	border:0;
	height:1px;
	margin-bottom:24px;
}




img {
	border: 0px solid #000000;
}





/* COLORS */


body {
	color : #333;
	background-color :#fff;
}


#header {
	background-color:#fff;
	color:#333;
}



h1, h1 a, h2, h3, h4, h5, h6 {
	color:#666 !important;
}


pre, code {  
	color: #000000;
}


strong {
	color: #333;
}


p.date {
    color:#888;
}


#PreviousNext strong {
    margin-right: 10px;
    color:#666
}

/* link colors, from daring fireball... */
a,
a:link {
	text-decoration: none;
	color: #008080;
	border-color: #999;
	border-width: 0 0 1px 0;
	border-style: none none solid none;
	padding: 3px 0px 2px 0px;
	background-color: inherit;
	}

a:visited,
a:link:visited {
	color: #999988;
	border-color: #999;
	border-width: 0 0 1px 0;
	border-style: none none dashed none;
	padding: 3px 0px 2px 0px;
	background-color: inherit;
	}
a:active,
a:hover {
	color: #008080;
	text-decoration: none;
	background-color: #efefef;
	border-style: none;
	}

a em {
	padding-bottom: 2px; /* Hack for WebKit; otherwise the underscore padding is 0 */
	}


#footer, #menu {
	background-color:#fff;
	color:#666;
}


#footer a, #menu a {
	color:#333;
}

.highlight { 
    background-color: #efefef;
    margin: 20px 0 20px 0; 
    padding: 7px 7px 7px 10px; 
}

